crates/ci-tests/tests/snapshots/use_case_tester__cmd-mvr_resolve_@pkg__qwer__1_--network_testnet.snap
---
source: crates/ci-tests/tests/use_case_tester.rs
expression: cmd_output
---
{
  "name": "@pkg/qwer",
  "metadata": {},
  "package_info": {
    "id": "0x2fef5ad8c3f89f14d36651f789cea90f8acc680f5e7d783cb1ab2f497b283f38",
    "git_table_id": "0x3255800addf2cb93ea4090165428e1b2a4c5bf925342acb4a80767ef716e2bb7",
    "default_name": "@pkg/qwer",
    "metadata": {
      "default": "@pkg/qwer"
    }
  },
  "git_info": {
    "repository_url": "https://github.com/MystenLabs/mvr-demo",
    "path": "mvr_a/",
    "tag": "19be11331bde43d017f024aab942c6d3db7a9a83"
  },
  "version": 1,
  "package_address": "0x077adfd262090b6645ea05087e252796a205d0369f165c99aa8147f3c678b579"
}
